##
date: 2025-01
Our paper "Path Percolation in Quantum Communication Networks" is featured in
<a href="https://phys.org/" target="_blank">phys.org</a>:
<a href="https://phys.org/news/2025-01-physicists-bridge-strategy-stabilize-quantum.html" target="_blank">Physicists propose 'bridge' strategy to stabilize quantum networks</a>

##
date: 2025-01
Our paper
"<a href="https://doi.org/10.1103/PhysRevLett.134.030803" target="_blank">Path Percolation in Quantum Communication Networks</a>"
is published in Physical Review Letters.
I am grateful for the contributions of my former lab collaborator, Bingjie,
my advisor, István, and Balázs, whose mathematical expertise was essential.

##
date: 2025-01
It was pleasant to present our work "Multipartite entanglement routing
as a hypergraph immersion problem" at
<a href="https://www.ddays.org/2025/index.html" target="_blank">Dynamics Days US 2025</a>.

##
date: 2024-12
Happy to attend
<a href="https://www.math.rutgers.edu/news-events/list-all-events/icalrepeat.detail/2024/12/15/22620/280/127th-statistical-mechanics-conference" target="_blank">the 127th Statistical Mechanics Conference</a>
at Rutgers University (probably the oldest conference I've attended...).
I gave a short talk about "path percolation", an interesting statistical model
that is related to both quantum communication networks and physical networks!

##
date: 2024-10
It was a great pleasure to present our work on "quantum networked memories"
at the 
<a href="https://www.imsi.institute/activities/statistical-methods-and-mathematical-analysis-for-quantum-information-science/quantum-networks/" target="_blank">IMSI Quantum Workshop</a>.

##
date: 2024-09
I presented a lecture titled "Distinct Statistical Characteristics of Quantum Communication Networks"
at RPI's own Physics, Applied Physics and Astronomy Colloquium.

##
date: 2024-06
We have three abstracts accepted for Oral Presentations at NetSci2024