@@ -191,6 +191,16 @@
 
               <li>
                 <p>
+                  [Mar, 2025] Our paper "Unveiling the importance of nonshortest paths in quantum networks" is published in Science Advances
+(<a href="https://doi.org/10.1126/sciadv.adt2404" target="_blank">doi.org/10.1126/sciadv.adt2404</a>).
+Congratulations to Xinqi and Gaogao!
+
+
+                </p>
+              </li>
+
+              <li>
+                <p>
                   [Jan, 2025] Our paper "Path Percolation in Quantum Communication Networks" is featured in
 <a href="https://phys.org/" target="_blank">phys.org</a>:
 <a href="https://phys.org/news/2025-01-physicists-bridge-strategy-stabilize-quantum.html" target="_blank">Physicists propose 'bridge' strategy to stabilize quantum networks</a>
@@ -228,16 +238,6 @@ as a hypergraph immersion problem" at
 at Rutgers University (probably the oldest conference I've attended...).
 I gave a short talk about "path percolation", an interesting statistical model
 that is related to both quantum communication networks and physical networks!
-
-
-                </p>
-              </li>
-
-              <li>
-                <p>
-                  [Oct, 2024] It was a great pleasure to present our work on "quantum networked memories"
-at the 
-<a href="https://www.imsi.institute/activities/statistical-methods-and-mathematical-analysis-for-quantum-information-science/quantum-networks/" target="_blank">IMSI Quantum Workshop</a>.
 
 
                 </p>
