@@ -111,6 +111,16 @@
 
               <li>
                 <p>
+                  [Mar, 2025] Our paper "Unveiling the importance of nonshortest paths in quantum networks" is published in Science Advances
+(<a href="https://doi.org/10.1126/sciadv.adt2404" target="_blank">doi.org/10.1126/sciadv.adt2404</a>).
+Congratulations to Xinqi and Gaogao!
+
+
+                </p>
+              </li>
+  
+              <li>
+                <p>
                   [Jan, 2025] Our paper "Path Percolation in Quantum Communication Networks" is featured in
 <a href="https://phys.org/" target="_blank">phys.org</a>:
 <a href="https://phys.org/news/2025-01-physicists-bridge-strategy-stabilize-quantum.html" target="_blank">Physicists propose 'bridge' strategy to stabilize quantum networks</a>
